--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.2.1</version>
 				<configuration>
+					<warName>entity</warName>
 					<warSourceDirectory>WebContent</warSourceDirectory>
 				</configuration>
 			</plugin>
