--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
 			<artifactId>swagger-jersey-jaxrs</artifactId>
 			<version>${swagger.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.strandls.biodiv</groupId>
+			<artifactId>user-client</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
 		<dependency>
 		    <groupId>com.opencsv</groupId>
