--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
 			<artifactId>swagger-jersey-jaxrs</artifactId>
 			<version>${swagger.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.strandls.biodiv</groupId>
+			<artifactId>authentication-utility</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 		
 		<dependency>
 			<groupId>com.strandls.biodiv</groupId>
