--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<hibernate-core.version>5.4.1.Final</hibernate-core.version>
 
 		<swagger.version>1.5.22</swagger.version>
-		<swagger-ui.version>3.17.0</swagger-ui.version>
+		<swagger-ui.version>3.23.5</swagger-ui.version>
 		<warName>entities-api</warName>
 		<!-- end Code -->
 	</properties>
@@ -282,7 +282,7 @@
 					<file>${project.build.directory}/swagger-ui/META-INF/resources/webjars/swagger-ui/${swagger-ui.version}/index.html</file>
 					<replacements>
 						<replacement>
-							<token>http://petstore.swagger.io/v2/swagger.json</token>
+							<token>https://petstore.swagger.io/v2/swagger.json</token>
 							<value>../api/swagger.json</value>
 						</replacement>
 					</replacements>
