--- a/pom.xml
+++ b/pom.xml
@@ -32,19 +32,23 @@
 		<swagger.version>1.5.22</swagger.version>
 		<swagger-ui.version>3.17.0</swagger-ui.version>
 		<warName>entities-api</warName>
-		<!-- end Code -->
+
+		<!-- Sonar Cloud -->
+		<sonar.projectKey>strandls_cropcert-entities</sonar.projectKey>
+		<sonar.organization>strandls</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<distributionManagement>
 		<repository>
 			<id>central</id>
 			<name>jfrog-releases</name>
-			<url>https://pamba.strandls.com/artifactory/libs-release-local</url>
+			<url>https://pamba.strandls.com/libs-release</url>
 		</repository>
 		<snapshotRepository>
 			<id>snapshots</id>
 			<name>jfrog-snapshots</name>
-			<url>https://pamba.strandls.com/artifactory/libs-snapshot-local</url>
+			<url>https://pamba.strandls.com/libs-snapshot</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -55,13 +59,13 @@
 			</snapshots>
 			<id>central</id>
 			<name>libs-release</name>
-			<url>https://pamba.strandls.com/artifactory/libs-release</url>
+			<url>https://pamba.strandls.com/libs-release</url>
 		</repository>
 		<repository>
 			<snapshots />
 			<id>snapshots</id>
 			<name>libs-snapshot</name>
-			<url>https://pamba.strandls.com/artifactory/libs-snapshot</url>
+			<url>https://pamba.strandls.com/libs-snapshot</url>
 		</repository>
 	</repositories>
 
